// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Radius > handles none 1`] = `
{
  "classNames": [
    "_root_9458de",
    "_--radius-none_9458de",
  ],
}
`;

exports[`Styles/Radius > handles responsive value 1`] = `
{
  "classNames": [
    "_root_9458de",
    "_--radius-small_9458de",
    "_--radius-none--m_9458de",
    "_--radius-circular--l_9458de",
  ],
}
`;

exports[`Styles/Radius > handles undefined value 1`] = `null`;

exports[`Styles/Radius > handles value 1`] = `
{
  "classNames": [
    "_root_9458de",
    "_--radius-large_9458de",
  ],
}
`;
